--- a/landing_page.html
+++ b/landing_page.html
@@ -40,7 +40,7 @@
 
             <!-- nav section start -->
 
-            <nav class="navbar navbar-expand-lg p-3 ">
+            <nav class="navbar navbar-expand-lg p-3  ">
                 <div class="container-fluid  " id="home">
                     <div class="logo">
                         <a href="#home"> <img src="./image/image.png" width="125px" alt=""> </a>
@@ -355,7 +355,7 @@
 
 
                     </div>
-                    <img src="./image/j-o-h-n-n-y-santiz-L6DAsk88-F4-unsplash.jpg" alt="">
+                    <img class="rounded-5" src="./image/j-o-h-n-n-y-santiz-L6DAsk88-F4-unsplash.jpg"  alt="">
                     <h3 class="fs-5">Sean Parker</h3>
                 </div>
 
